--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ gen/
 # Gradle files
 .gradle/
 build/
+build.gradle
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -33,3 +34,5 @@ captures/
 
 # IntelliJ Stuff
 .idea/
+
+*.ini
