--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        jcenter() // or mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.1.0'
+    }
+}
+
 apply plugin: 'com.android.application'
 
 android {
@@ -6,7 +16,7 @@ android {
 
     defaultConfig {
         applicationId "io.bloc.android.blocly"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -20,9 +30,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:recyclerview-v7:24.0.0-alpha1'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile files('libs/universal-image-loader-1.9.5.jar')
 }
