--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,18 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.android.tools.build:gradle:2.1.3'
     }
 }
 
 apply plugin: 'com.android.application'
 
 android {
+
+    repositories {
+        maven { url 'http://repo1.maven.org/maven2' }
+    }
+
     compileSdkVersion 24
     buildToolsVersion '24.0.1'
 
@@ -20,6 +25,7 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -35,4 +41,12 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.1.1'
     compile files('libs/universal-image-loader-1.9.5.jar')
     compile files('libs/jsoup-1.8.1.jar')
+    androidTestCompile 'junit:junit:4.12'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
+}
+
+configurations.all {
+    resolutionStrategy {
+        force 'com.android.support:support-annotations:24.1.1'
+    }
 }
